# aws-tree-organizations

./: LICENSE  README.md  pyproject.toml
src/aws_tree_orgs/: __init__.py  main.py  model.py  view.py
