[project]
name = "aws-tree-orgs"
version = "0.1.0"
description = "Simple AWS Organizations Tree Viewer"
authors = [
    { name = "miyazaki", email = "kota_miyazaki@adforce.co.jp" }
]
dependencies = [
    "boto3>=1.34.73",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
aws-tree-orgs = "aws_tree_orgs.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "moto>=5.0.4",
    "pytest>=8.1.1",
    "ruff>=0.4.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aws_tree_orgs"]

[tool.pytest.ini_options]
pythonpath = "src"
